data/derived/comb/progs/unify/prog1367.ml.out
Characters 105-106:
  else x@(digitsOfInt y);;
       ^
Error: This expression has type int but an expression was expected of type
         'a list
